--- a/EZG 23/praesentation.Rmd
+++ b/EZG 23/praesentation.Rmd
@@ -182,23 +182,23 @@ for (i in 1:length(events)) {  #Eine Iteration je Event
   
 }
 
-result_data <- result_data %>% 
+result_data <- result_data %>%  #na's filtern
   drop_na()
 
   
-agg <- result_data %>%
+agg <- result_data %>% #events aggregieren
   group_by(event_id) %>%
   summarise(across(c(Wert, N, baseflow), sum))
 
-agg <- agg %>% 
+agg <- agg %>%  #spalten umbenennen
   dplyr::rename(Qges = Wert) %>% 
   dplyr::rename(Qb = baseflow)
 
-agg$Qf <- (agg$Qges-agg$Qb)
+agg$Qf <- (agg$Qges-agg$Qb) #quickflow berechnen
 
-agg$RFC <- agg$Qf/agg$N
+agg$RFC <- agg$Qf/agg$N #abflussbeiwert berechnen
 
-head(agg, 10) %>% 
+head(agg) %>% 
   gt()
 
 ```
@@ -212,20 +212,23 @@ Der zuvor aggregierte Datensatz wurde verwendet um mithilfe von limbs() den Star
 
 ```{r, fig.show='hide', eval=TRUE, results='hide'}
 
-for (i in 1:nrow(agg)) {
-  new_t <- new %>% 
+for (i in 1:nrow(agg)) { #Eine Iteration je Event
+  new_t <- new %>%      #Event filtern
     filter(Name == i) %>% 
     select(Wert, N) %>% 
     mutate(id = row_number())
   
+  #nachdem der Event gefiltert wurde, ermitteln wir den Event Baseflow
   BFI_res <- tryCatch(eventBaseflow(new_t$Wert), error = function(e) return(NA))
-  print(rep(i))
+  print(rep(i)) #und dann, wann die Steigung des Events beginnt und aufhört. 
   ifelse(!is.na(BFI_res), df <- limbs(data = new_test$Wert, dates = NULL, events = BFI_res), NA)
   
+  #aus den erzeugten DataFrame extrahieren wir spezifische Werte
   agg$Q_event[i] <- ifelse(is.na(df), NA, df[1, "sum"])
   agg$srt_event[i] <- ifelse(is.na(df), NA, df[1, "srt"])
   agg$end_event[i] <- ifelse(is.na(df), NA, df[1, "end"])
   
+  #Niederschlagssumme wird für jedes Event neu berechnet. 
   agg$sum_n[i] <- new %>%
     filter(Name == i) %>% 
     slice(agg$srt_event[i]:agg$end_event[i]) %>%
@@ -234,13 +237,28 @@ for (i in 1:nrow(agg)) {
   
 }
 
+agg$RFC_2 <- agg$Q_event/agg$sum_n #neuer Abflussbeiwert wird berechnet
+
+
 
 ```
 
-## Berechnen des 2. RFC und Vergleich
+```{r, echo=FALSE}
+limbs(data = new_test$Wert, dates = NULL, events = BFI_res)
+```
 
-```{r}
-agg$RFC_2 <- agg$Q_event/agg$sum_n
+
+```{r, echo=FALSE}
+
+head(agg, 10) %>% 
+  gt()
+
+```
+
+
+## Vergleich der Abflussbeiwerte
+
+```{r p1}
 
 plot_q <- agg %>% 
   select(event_id, RFC, RFC_2)
@@ -249,13 +267,13 @@ plot_q <- as.data.frame(plot_q)
 
 plot_q <- melt(plot_q, id=c("event_id"))
 
-
-plot_q %>% 
+p1 <- plot_q %>% 
   group_by(variable) %>% 
   ggplot(aes(x = event_id, y = value, group = variable, color = variable)) +
-  geom_point() +
-  geom_line() +
-  facet_wrap(~variable, nrow = 2, scales = "free")
+  geom_line() 
+
+p1
+
 
 ```
 
